--- a/items.yml
+++ b/items.yml
@@ -1,5 +1,9 @@
-# $k$ (key) меняется на ключ мапа
 # $kws$ (key with space) меняется на ключ мапа, разделяя слова с большой буквы пробелами
+# Например
+# ExampleGroup:
+#   ExampleMapKey:
+#     name: $kws$
+# name будет Example Map Key
 
 Weapon:
   BattleFury:
