--- a/settings/items.yml
+++ b/settings/items.yml
@@ -10,7 +10,6 @@ Weapon:
     name: $kws$
     damage: 10
     durab: 5
-    mana_cost: 1
 
 ActionWeapon:
   EtherialBlade:
@@ -22,5 +21,5 @@ ActionWeapon:
 Consume:
   FairyFire:
     name: $kws$
-    mana_cost: 0
     hp_regen: 20
+    count: 3
